web-frontend/src/components/Nav/Nav.css
.navbar-container {
  position: sticky;
  top: 0;
  z-index: 100;
}

.navbar {
  height: 60px;
  background-size: cover;
  background-repeat: no-repeat;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 30px;
  margin-bottom: 1px;
}

.navbar_menu-container {
  display: flex;
  align-items: center;
  width: 100%;
}

/* Light theme specific styles */
.navbar.light-theme {
  background-image: url('../../assets/light-nav-cropped.svg');
}

/* Dark theme specific styles */
.navbar.dark-theme {
  background-image: url('../../assets/dark-nav-cropped.svg');
}

.navbar__site-name {
  font-family: 'Black Han Sans', sans-serif;
  font-weight: 400;
  font-size: 48px;
  font-style: normal;
}

.navbar__site-name.light {
  color: var(--orange);
}

.navbar__site-name.dark {
  color: var(--orange);
}

.navbar_list {
  display: flex;
  list-style: none;
  margin-right: 50px;
}

.navbar_item {
  white-space: nowrap;
}

.navbar_link {
  text-decoration: none;
  font-family: 'Roboto', sans-serif;
  font-size: 1.2rem;
  font-weight: 400;
  font-style: normal;
  text-align: center;
  padding: 10px;
  margin: 0px 5px;
  border-style: solid;
  border-width: 0px 0px 1px 0px;
  border-color: transparent;
  transition: 250ms;
}

.navbar_link.light {
  color: var(--black);
}

.navbar_link.dark {
  color: var(--white);
}
.navbar_link:hover {
  transition: 250ms;
  color: var(--orange);
}

.navbar_menu {
  color: white;
  display: none;
  cursor: pointer;
}

@media screen and (max-width: 767px) {
  .navbar {
    height: 40px;
    padding: 0;
    width: 100%;
  }
  .navbar__site-name {
    font-size: 32px;
  }

  .navbar_menu-container {
    display: flex;
    justify-content: space-between;
    width: 100%;
  }
  .navbar_logo {
    margin-left: 20px;
  }

  .navbar_list {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: absolute;
    top: 20px;
    left: 0;
    width: 100%;
    height: 350px;
    transform: translateX(-100%);
    transition: transform 0.7s ease;
  }

  .navbar_list--active {
    transform: translateX(0%);
  }

  .navbar_list--active .navbar_item {
    display: flex;
    justify-content: center;
    width: 100%;
  }

  .navbar_list--active .navbar_item {
    display: flex;
    justify-content: center;
    width: 100%;
  }

  .navbar_menu {
    display: block;
    margin: 20px;
  }

  .navbar_item {
    width: 100%;
    margin: 9px;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .navbar_link {
    display: flex;
    height: 100%;
    width: 100%;
    justify-content: center;
    align-items: center;
    margin: 0px;
    border-width: 0px;
  }

  .navbar_link.light {
    background-color: rgb(204, 204, 202);
  }
  .navbar_link.dark {
    background-color: rgb(50, 49, 54);
  }

  .navbar_link:hover {
    font-weight: 600;
  }
}

